# colorlovers-api-demo

./: .gitignore  Gui.hs  Hex.hs  Json.hs  Main.hs  Palette.hs  PaletteGetterFile.hs  PaletteGetterWeb.hs  README.md  colorlovers-api-demo.cabal  example.json  example2.json  glosspalettes.cabal
app/: ColourLoversAPI.hs  HttpUtils.hs  Main.hs  PaletteGetterFile.hs  PaletteGetterWeb.hs  Random.hs  SampleAeson.hs
docs/: LICENSE  todo.txt
inputs/: candy.json  faves.json  many.json  ninja.json  scifi.json
