name:                colorlovers-api-demo
version:             0.1.0.0
synopsis:            Beginner's app, showing palettes from colourlovers.com in gloss.
homepage:            https://github.com/githubuser/colorlovers-api-demo#readme
license:             MIT
license-file:        docs/LICENSE
author:              neillbogie@googlemail.com
maintainer:          example@example.com
copyright:           2013 Neill Bogie
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/githubuser/colorlovers-api-demo#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable colorlovers-api-demo-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , array
                     , containers
                     , gloss
                     , bytestring
                     , aeson
                     , attoparsec
                     , base
                     , HTTP
                     , random
                     , stm
                     , colorlovers-api-demo
  default-language:    Haskell2010

test-suite colorlovers-api-demo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , colorlovers-api-demo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nbogie/colorlovers-api-demo
